# Pylux

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  STEAMWORKS_INTEGRATION.md  conversation_summary.md  fastbuild.bat  index.html  mkdocs.yml  sitemap.xml  steam_appid.txt
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/schemas/com.metallic.chiaki.common.AppDatabase/: 2.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: audio-decoder.c  audio-decoder.h  chiaki-jni.c  log.h  opus-decoder.c  opus-decoder.h  video-decoder.c  video-decoder.h
android/app/src/main/res/animator/: card_scale_animator.xml
android/app/src/main/res/color/: bottom_nav_color.xml  mode_switcher_background.xml  mode_switcher_stroke.xml  secondary_header_button_tint.xml
android/app/src/main/res/drawable/: bg_support_badge.xml  bg_support_drag_handle.xml  bg_support_header_gradient.xml  bg_support_icon_circle.xml  bg_support_paywall_panel.xml  card_gradient_overlay.xml  cloud_tab_owned_selected.xml  cloud_tab_owned_unselected.xml  cloud_tab_selected.xml  console_card_header_gradient.xml  fast_scroller_indicator_bg.xml  fast_scroller_thumb_bg.xml  ic_circle.xml  ic_cloud.xml  ic_performance.xml  ic_sort.xml  ic_star_filled.xml  ic_support_bullet.xml  icon_island_background.xml  icon_island_selected.xml  ownership_badge_bg.xml  platform_badge_background.xml  ps5_platform_badge_bg.xml  pylux_mark_square.xml  search_background.xml  (+2 more)
ios/: .gitignore  CMakeLists.txt  ExportOptions.plist  README.md  build.sh
ios/Pylux/: Pylux.entitlements
ios/Pylux.xcodeproj/: project.pbxproj
ios/Pylux.xcodeproj/xcshareddata/xcschemes/: Pylux.xcscheme
ios/Pylux/App/: ContentView.swift  PyluxApp.swift  PyluxAppDelegate.swift
ios/Pylux/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Pylux/Assets.xcassets/PyluxLogo.imageset/: Contents.json
ios/Pylux/Bridge/: ChiakiAudioOutputIOS.h  ChiakiAudioOutputIOS.m  ChiakiBridge.h  ChiakiBridge.m  ChiakiDatacenterPing.h  ChiakiDatacenterPing.m  ChiakiSessionBridge.h  ChiakiSessionBridge.m  DiscoveryBridge.h  DiscoveryBridge.m  HolepunchBridge.h  HolepunchBridge.m  PyluxChiakiLog.h  PyluxChiakiLog.m  RegistBridge.h  RegistBridge.m  SessionEventReceiver.h  SessionEventReceiver.m  VideoDecoder.h  VideoDecoder.m
ios/Pylux/Donation/: DonationPaywallView.swift  DonationPhrasePicker.swift  DonationProducts.storekit  DonationPromptCoordinator.swift  DonationStore.swift
ios/Pylux/Models/: CloudModels.swift  HostModels.swift  StreamState.swift
ios/Pylux/Services/: CloudCatalogService.swift  CloudHttpClient.swift  CloudStreamingBackend.swift  PSGaikaiStreaming.swift  PSKamajiSession.swift  PictureInPictureManager.swift  PsnTokenManager.swift  PyluxLoginService.swift  SecureStore.swift  StreamInput.swift  StreamRumbleFeedback.swift  StreamSession.swift
ios/Pylux/Views/: AutoRegistrationView.swift  CloudPlayView.swift  ConnectInfoEntryView.swift  ControlSVGPathParser.swift  HostCardView.swift  LicenseView.swift  LoginWebView.swift  ManualHostView.swift  RegistrationView.swift  RemotePlayView.swift  SettingsView.swift  StreamTouchControlsButtonViews.swift  StreamTouchControlsContainerView.swift  StreamTouchControlsOverlay.swift  StreamTouchControlsStickDPad.swift  StreamTouchControlsTouchpadView.swift  StreamTouchControlsTypes.swift  StreamVideoView.swift  StreamView.swift
ios/fastlane/: Fastfile  README.md
(+319 files in other folders)
